_sass/minimal-mistakes/_archive.scss
/* ... */
.archive__item-caption {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 0 auto;
  padding: 2px 5px;
  color: #fff;
  font-family: $caption-font-family;
  font-size: $type-size-8;
  background: #000;
  text-align: right;
  z-index: 5;
  opacity: 0.5;
  border-radius: $border-radius 0 0 0;

  @include breakpoint($large) {
    padding: 5px 10px;
  }

  a {
    color: #fff;
    text-decoration: none;
  }
}

/*
   List view
   ========================================================================== */

// For items in the blog list and search list
.list__item {
  .page__meta__block {
    display: inline-block;
  }
    
  .page__meta__date {
    font-size: 0.7em; 
    margin: 0 8px 0 2px;
    color: $primary-color;
  }
    
  .page__meta {
    margin: 0 0 4px;
    font-size: 0.6em;
  }
    
  .archive__item-excerpt {
    margin-top: 5px;
  }
    
  position: relative;
  float: left;
  margin-left: 0;
  margin-right: 0;
  width: 100%;
  clear: both;
  font-size: 1.125em;

  h2 {
    margin: 0.5em 0; 
  }
    
  a {
    color: inherit;
    text-decoration: none;
  }

  .archive__item-teaser {
    margin-bottom: 0.5em;

    img { // Center the image horizontally and vertically
      margin: 0;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
  }

  @include breakpoint($tiny) {
    h2 {
      font-size: 1rem;
    }    

    .archive__item-teaser {
      float: left;
      width: span(5 of 12);
      height: 150px;
    }

    .archive__item-body {
      float: right;
      width: span(7 of 12);
    }
  }

  @include breakpoint($small) {
    h2 {
      font-size: 1rem;
    }  
    .archive__item-teaser {
      float: left;
      width: span(4 of 12);
      height: 150px;
    }

    .archive__item-body {
      float: right;
      width: span(8 of 12);
    }
  }

  @include breakpoint($medium) {
    h2 {
      font-size: 1.5rem;
    }
    .archive__item-teaser {
      float: left;
      width: span(4 of 12);
      height: 250px;
    }
      
    .archive__item-body {
      float: right;
      padding-left: 10px;
      width: span(8 of 12);
    }
  }
}

.list__wrapper {
  @include clearfix();
}

/*
   Grid view
   ========================================================================== */

.archive {
  .grid__wrapper {
    /* extend grid elements to the right */
      border-right: 1px solid $border-color;
      width: 100%;

    @include breakpoint($large) {
      //margin-right: -1 * $right-sidebar-width-narrow;
    }

    @include breakpoint($x-large) {
      //margin-right: -1 * $right-sidebar-width;
    }
  }
}

.grid__item {
  margin-bottom: 2em;
    
  a {
    color: inherit;
    text-decoration: none;
  }

  @include breakpoint($small) {
    float: left;
    width: span(4 of 12);

    // Fix the weird overflow when window is smaller than medium
    &:nth-child(3n + 1) {
      clear: both;
      margin-left: 0;
    }

    &:nth-child(3n + 2) {
      clear: none;
      margin-left: gutter(of 12);
    }

    &:nth-child(3n + 3) {
      clear: none;
      margin-left: gutter(of 12);
    }
    
  }

  @include breakpoint($medium) {
    margin-left: 0; /* override margin*/
    margin-right: 0; /* override margin*/
    width: span(4 of 12);
      
    &:nth-child(3n + 1) {
      clear: both;
      margin-left: 0;
    }

    &:nth-child(3n + 2) {
      clear: none;
      margin-left: gutter(of 12);
    }

    &:nth-child(3n + 3) {
      clear: none;
      margin-left: gutter(of 12);
    }
  }
    
  .page__meta__block {
    display: inline-block;
  }
    
  .page__meta__date {
    font-size: 0.7em; 
    margin: 0 8px 0 2px;
    color: $primary-color;
  }

  .page__meta {
    margin: 0 0 4px;
    font-size: 0.6em;
  }

  .archive__item-title {
    margin-top: 0.5em;
    font-size: $type-size-5;
  }

  .archive__item-excerpt {
    display: none;

    @include breakpoint($medium) {
      display: block;
      font-size: $type-size-6;
    }
  }

  .archive__item-teaser {
    @include breakpoint($small) {
      max-height: 200px;
    }

    @include breakpoint($medium) {
      max-height: 200px;
    }
  }
}

/*
   Related view
   ========================================================================== */

.related__item {
  margin-bottom: 2em;
    
  a {
    color: inherit;
    text-decoration: none;
  }

  @include breakpoint($small) {
    float: left;
    margin-left: 0; /* override margin so they fill up the page*/
    margin-right: 0; /* override margin so they fill up the page*/
    width: span(5 of 10);

    &:nth-child(2n + 1) {
      clear: both;
      margin-left: 0;
    }

    &:nth-child(2n + 2) {
      clear: none;
      margin-left: gutter(1 of 10);
    }
  }

  @include breakpoint($medium) {
    margin-left: 0; /* override margin so they fill up the page*/
    margin-right: 0; /* override margin so they fill up the page*/
    width: span(4 of 12);

    &:nth-child(2n + 1) {
      clear: none;
    }

    &:nth-child(4n + 1) {
      clear: both;
    }

    &:nth-child(4n + 2) {
      clear: none;
      margin-left: gutter(1 of 12);
    }

    &:nth-child(4n + 3) {
      clear: none;
      margin-left: gutter(1 of 12);
    }

    &:nth-child(4n + 4) {
      clear: none;
      margin-left: gutter(1 of 12);
    }
  }
    
  .page__meta__block {
    display: inline-block;
  }
    
  .page__meta__date {
    font-size: 0.7em; 
    margin: 0 8px 0 2px;
    color: $primary-color;
  }

  .page__meta {
    margin: 0 0 4px;
    font-size: 0.6em;
  }

  .archive__item-title {
    margin-top: 0.5em;
    font-size: $type-size-5;
  }

  .archive__item-excerpt {
    display: none;

    @include breakpoint($medium) {
      display: block;
      font-size: $type-size-6;
    }
  }

  .archive__item-teaser {
    @include breakpoint($small) {
      max-height: 200px;
    }

    @include breakpoint($medium) {
      max-height: 200px;
    }
  }
}
/* ... */

